--- a/WEEK_1/style.css
+++ b/WEEK_1/style.css
@@ -84,8 +84,10 @@ input[type=search]{
     font-family: Roboto, Arial, sans-serif;
     font-size: 16px;
 }
-#DOM-tree{
+.DOM-tree{
     text-decoration: none;
+    padding-left: 5px;
+    
 }
 .link{
     text-decoration: none;
